@@ -144,8 +144,8 @@ $pgv_lang["PRIV_HIDE"]				= "Hide even from admin users";
 $pgv_lang["manage_gedcoms"] 		= "Manage GEDCOMs and edit Privacy";
 $pgv_lang["keep_media"]				= "Keep media links";
 $pgv_lang["media_now_linked to"]	= " Media item now linked to - ";
-$pgv_lang["current_links"]			= "Current links:";
-$pgv_lang["add_more_links"]			= "Add more links:";
+$pgv_lang["current_links"]			= "Links";
+$pgv_lang["add_more_links"]			= "Add links";
 $pgv_lang["enter_pid_or_name"]		= "Enter individual ID or name";
 $pgv_lang["set_links"]				= "Set links";
 $pgv_lang["add_or_remove_links"]	= "Manage links";
